@@ -463,3 +463,5 @@ different panes. Tie/untie option added for notes. Broken rhythm
     Ctrl+Alt+End: last page
 
 - ABC Assist: Added support for microtones
+
+- Updated Fields and Command Reference
